2003-10-19  Per Bothner  <per@bothner.com>

	* ValuesEvery.java:  New class, extends CpsProcedure.
	* Makefile.am:  Update accordingly.

2003-10-07  Per Bothner  <per@bothner.com>

	* BooleanValue.java (booleanValue):  Change to match spec better.

	* IntegerRange.java (integerRange):  Fix bugs.  Make static.

2003-09-24  Per Bothner  <per@bothner.com>

	* MakeAttribute.java:  Now extends gnu.kawa.xml.NodeConstructor.
	(apply):  Update.  (compileToNode):  New, replaces compile method.
	* MakeElement.java:  Likewise.

2003-09-11  Per Bothner  <per@bothner.com>

	* ValuesFilter.java:  Implement CanInline.
	(inline):  New method.

2003-09-09  Per Bothner  <per@bothner.com>

	* RelativeStep.java:  Now implements CanInline.
	(inline):  New method.
	(apply):  Use Nodes class and simplify.

2003-08-03  Per Bothner  <per@bothner.com>

	* RelativeStep.java:  New class, extends CpsProcedure.
	* ValuesFilter.java:  Re-write to correctly implement spec.
	* Position.java:  Remove - no longer used.
	* Makefile.in (java_sources):  Update accordingly.

	* StringValue.java (contains, startsWith, endsWith):  Use stringValue
	rather than toString to convert arguments.

2003-07-23  Terje Pedersen  <terje@brassforum.com>

	* StringValue.java (stringLength, substringBefore, substringAfter,
	translate, stringPad, contains, startsWith, endsWith, stringJoin):
	New standard functions.

2003-07-16  Per Bothner  <per@bothner.com>

	* Compare.java (inline):  Use new inlineIfConstant method overloading.

2003-07-10  Per Bothner  <per@bothner.com>

	* MakeElement.java (compile):  Use new
	ElementConstructor.compileUsingNodeTree method.

2003-05-08  Per Bothner  <per@bothner.com>

	* Debug.java:  New class.
	(trace):  New static method, implements the 'trace' function.
	* Makefile.am (java_sources):  Update accordingly.

2003-03-29  Per Bothner  <per@bothner.com>

	* StringValue.java (lowerCase, upperCase, substring):  New methods.
	Based on a patch from Jim Smith <jim@pagesmiths.com>.
